# anime-track-app

./: CMakeLists.txt  CMakeLists.txt.user.fJHput  README.md  animeRepository.cpp  animeRepository.h  cmake_install.cmake  database.cpp  database.h  episoderepository.cpp  episoderepository.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  mongoose.h  repository.h  searchanime2.cpp  searchanime2.h  searchhandler.cpp  searchhandler.h  searchservice.cpp  searchservice.h  utils.cpp  utils.h  webinterface.cpp  webinterface.h  webserver.cpp  webserver.h  webui.c  webui.cpp  webui.h
anime-download-web/: package.json  utils.txt
anime-download-web/src/: App.css  App.js  appRouter.js
anime-download-web/src/components/: anime.js  animeButton.js  animeList.js  linkApp.js  log.js  modalCreateAnime.js  modalDeleteConfirmation.js
